# ohbrown-test

./: README.md
backend/: .gitignore  pyproject.toml  tox.ini
backend/apps/account/: serializers.py  services.py  urls.py  utils.py  views.py
backend/apps/account/dto/: __init__.py  command.py  info.py
backend/apps/account/migrations/: 0001_initial.py
backend/apps/account/tests/: test_api.py
backend/apps/task/: choices.py  models.py  serializers.py  services.py  views.py
backend/apps/task/dto/: __init__.py  command.py  info.py
backend/apps/task/migrations/: 0001_initial.py
backend/apps/task/tests/: test_api.py
backend/project/: asgi.py  urls.py  wsgi.py
backend/settings/: base.py  local.py  production.py
backend/utils/: decorators.py  mixin.py  paginator.py  serializer.py  viewset.py
frontend/todo/: index.html  package-lock.json  package.json
frontend/todo/src/: App.vue
frontend/todo/src/api/: auth.ts  axios.ts  task.ts  user.ts
frontend/todo/src/router/: index.ts
frontend/todo/src/services/: auth.ts  task.ts  user.ts
frontend/todo/src/stores/: auth.ts  task.ts  user.ts
frontend/todo/src/types/: auth.ts  response.ts  task.ts
frontend/todo/src/utils/: caseConverter.ts  token.ts
frontend/todo/src/views/: Login.vue  Main.vue  SignUp.vue  TaskCreate.vue  TaskDetail.vue  TaskEdit.vue
